# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  11 Sep 2011; Fabio Erculiani <lxnay@gentoo.org> defaults/initrd.scripts,
  defaults/linuxrc:
  drop parse_opt usage and crufty, deprecated subshelling through 

  30 Aug 2011; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts:
  Fix quoting issue (bug #380729).

  Thanks to:
  - Axel Bringenberg

  30 Aug 2011; Sebastian Pipping <sping@gentoo.org>
  +patches/mdadm/3.1.4/mdadm-3.1.4-z-now.patch, gen_compile.sh:
  Enable patch application for mdadm, add patch to fix compilation (bug
  #381089)

  28 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> defaults/initrd.scripts,
  defaults/linuxrc, doc/genkernel.8.txt:
  Add basic support to AUFS2, requires kernel with aufs module or built-in

  16 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> gen_compile.sh:
  gen_compile: correct MAKEOPTS usage on utils task

  16 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> gen_compile.sh:
  gen_compile: always use -j1 with kernel *_install targets, fixes compilation
  with make 3.82

  06 Aug 2011; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
  No longer copy /lib/libsysfs*so* for multipath-tools (bug #300841, bug
  #377709)

  31 Jul 2011; Sebastian Pipping <sping@gentoo.org>
  -patches/busybox/1.7.4/1.7.4-ash-timeout.diff,
  -patches/busybox/1.7.4/1.7.4-mdstart.diff,
  -patches/busybox/1.7.4/1.7.4-mount-umount-i-option.diff,
  -patches/busybox/1.7.4/1.7.4-openvt.diff,
  -patches/busybox/1.7.4/1.7.4-static-error.diff,
  -patches/busybox/1.7.4/1.7.4-make-3.82.diff, -patches/busybox/1.7.4/README,
  -patches/busybox/1.7.4/busybox-1.7.4-signal-hack.patch:
  End support for 4 years old busybox 1.7.4 (bug #377133)

  31 Jul 2011; Sebastian Pipping <sping@gentoo.org> doc/genkernel.8.txt:
  Improve doc on filing bugs

  28 Jul 2011; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.18
